<resources>
    <string name="app_name">TeamLeagueNBA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_bottom">menuBottom</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Atencion">Atención</string>
    <string name="MensajeSalirApp">¿Desea salir de la aplicación?</string>
    <string name="Salir">Salir</string>
    <string name="Cancelar">Cancelar</string>
    <string name="CerrarSesionPregunta">¿Desea cerrar sesión?</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="Programadores">Aplicación creada por: Xavier Cañada, Alvaro Vázquez y Alberto Tiffon</string>
    <string name="Version">Versión 1.0</string>
    <string name="NoValidDate">Fecha no valida</string>
    <string name="ErrorEmptyFields">Introduce todos los campos</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="l_e_a_g_u_e_t_e_a_m">L e a g u e T e a m</string>
    <string name="registrarse">Registrarse</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="unirse_a_liga">Unirse a liga</string>
    <string name="crear_liga_nueva">Crear liga nueva</string>
    <string name="bienvenido_a_leagueteamnba">Bienvenido a LeagueTeamNBA!</string>
    <string name="info1">Crea tu propia liga o unete a una liga ya existente con los botones de arriba</string>
    <string name="info2">Al crear o unirte una liga, tendrás que representar a un equipo real de NBA e intentar conseguir el prestigioso anillo</string>
    <string name="info3">Como se juega:</string>
    <string name="info4">Al entrar en una liga te entregaremos tu equipo inicial aleatorio</string>
    <string name="info5">Debes armar tu equipo estableciendo antes de las 17:00 tu equipo titular, que son los jugadores que puntuaran</string>
    <string name="info6">Cada dia, puedes alternar entre los 5 jugadores suplentes y los otros 7 suplentes (los cambios se han de realizar entre las 8:00 y las 17:00)</string>
    <string name="info7">Al final del dia, si el jugador ha jugado un partido obtendra una cantidad de puntos dependiendo de su actuación</string>
    <string name="info8">Cada jugador puede jugar 2 partidos máximo en la misma jornada (De lunes a lunes)</string>
    <string name="info9">Además podrás establecer a uno de tus 12 jugadores de la jornada al jugador franquicia, el cual podrá jugar un partido mas que los demás en esa jornada</string>
    <string name="info10">Al finalizar la jornada obtendras una puntuación segun la puntuación de tus jugadores</string>
    <string name="info11">Según la puntuación de la jornada, estaras en una posición en el ranking semanal y obtendrás una cantidad establecida de dinero</string>
    <string name="info12">Mercado:</string>
    <string name="info13">Con este dinero, podrás realizar fichajes en el mercado</string>
    <string name="info14">En el mercado, cada dia a las 9:00 salen nuevos jugadores de manera aleatoria a los que podrás pujar de manera secreta</string>
    <string name="info15">PERO CUIDADO! Tan solo habrá una puja ganadora ya que solo puede haber un LeBron James en cada liga</string>
    <string name="info16">A las 8:00 la mayor puja por cada jugador obtiene el jugador</string>
    <string name="info17">Buena suerte en tus futuras ligas y que gane el mejor!</string>
    <string name="mes">Mes:</string>
    <string name="a_o">Año:</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="dia">Dia:</string>
    <string name="league_team">League Team</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="mis_ligas">Mis ligas</string>
    <string name="mi_liga_1">Mi liga 1</string>
    <string name="mi_liga_2">Mi liga 2</string>
    <string name="usuario">Usuario</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="inicio">Inicio</string>
    <string name="alineaci_n">Alineación</string>
    <string name="mercado">Mercado</string>
    <string name="clasificaci_n">Clasificación</string>
    <string name="jornada">Jornada</string>
    <string name="ToastErrorMain">Debes introducir una contraseña y usuario</string>
    <string name="ErrorLogin">Usuario y/o contraseña incorrecto</string>
    <string name="SelectLeague">Selecciona una liga</string>
    <string name="Exterior">Exterior</string>
    <string name="Ext">Ext</string>
    <string name="Int">Int</string>
</resources>
