<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/ligas"
        android:title="@string/mis_ligas">
        <menu>
            <item
                android:id="@+id/liga1"
                android:icon="@drawable/pelota"
                android:title="@string/mi_liga_1" />
            <item
                android:id="@+id/liga2"
                android:icon="@drawable/pelota"
                android:title="@string/mi_liga_2" />
        </menu>
    </item>

    <item android:title="@string/usuario">
        <menu>
            <item
                android:id="@+id/config"
                android:icon="@drawable/ajustes"
                android:title="@string/configuraci_n" />
            <item
                android:id="@+id/salir"
                android:icon="@drawable/salir"
                android:title="@string/cerrar_sesi_n" />
        </menu>
    </item>

</menu>
