<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicio"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/inicio" />

    <item
        android:id="@+id/ali"
        android:enabled="true"
        android:icon="@drawable/alineacion"
        android:title="@string/alineaci_n" />

    <item
        android:id="@+id/mercado"
        android:enabled="true"
        android:icon="@drawable/mercado"
        android:title="@string/mercado" />

    <item
        android:id="@+id/clasificacion"
        android:enabled="true"
        android:icon="@drawable/clasificacion"
        android:title="@string/clasificaci_n" />

    <item
        android:id="@+id/jornada"
        android:enabled="true"
        android:icon="@drawable/jornada"
        android:title="@string/jornada" />

</menu>
