<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado">

    <EditText
        android:id="@+id/configuracion_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/configuracion_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/configuracion_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="Apellido "
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/configuracion_contraseña"
        app:layout_constraintStart_toStartOf="@+id/configuracion_nombre"
        app:layout_constraintTop_toBottomOf="@+id/configuracion_nombre" />

    <EditText
        android:id="@+id/configuracion_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/lv_misligas"
        app:layout_constraintStart_toStartOf="@+id/configuracion_apellido"
        app:layout_constraintTop_toBottomOf="@+id/configuracion_apellido" />

    <ListView
        android:id="@+id/lv_misligas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configuracion_contraseña" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="79dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/mis_ligas"
        app:layout_constraintBottom_toTopOf="@+id/lv_misligas"
        app:layout_constraintEnd_toStartOf="@+id/configuracion_contraseña"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:background="@drawable/my_button_bg"
        android:onClick="update"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_misligas" />

</android.support.constraint.ConstraintLayout>